_sass/pages/_courseware.scss
@import "variables";
@import "functions";

// Course About
.gym-course-about .main-container {
  font-size: 16px;
}

.course {
  background: #ebebeb;
  padding-top: 0;
  padding-bottom: 0;

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    font-family: $gym-font-stack;
    font-weight: 900;
  }

  .course-info {
    border-right: 1px solid #ccc;
    border-left: 1px solid #ccc;
    border-top: 0;
    border-bottom: 0;
  }

  .course-overview {
    background: white;
    padding: 2.5em;
  }

  .teacher-image {
    border: 1px solid #999;
    height: 115px;
    float: left;
    margin: 0 15px 0px 0;
    overflow: hidden;
    width: 115px;

    img {
      display: block;
      min-height: 100%;
      max-width: 100%;
    }
  }

  header.hero-title {
    padding: 1.2em;
  }

  .hero-banner {
    background: #777;
    border-bottom: 0px;

    h1 {
      color: white;
      font-family: $gym-font-stack;
      text-align: center;
    }

    img {
      max-height: 325px;
      max-width: 100%;
    }
  }

  .course-metabar {
    background: #444;
    padding: 2.2em;

    strong {
      font: 1.4em/1.2 $gym-font-stack;
      color: #ccc;
    }
  }

  .level strong {
    font-weight: normal;
  }
}

// Courseware garbage
.seq_contents.tex2jax_ignore.asciimath2jax_ignore {
  display: none;
}

// Staff status bar
.wrapper-preview-menu {
  background-color: #0075b4;
}

.preview-menu {
  padding: 15px 0;
}

.preview-actions {
  padding: 0;
  margin: 0;
}

.action-preview {
  display: inline-block;

  form {
    margin: 0;
    display: inline-flex;
  }

  label {
    margin-right: 10px;
    margin-bottom: 0;
    color: #fff;
  }

  select {
    padding: 1rem;
    margin: 0;
  }
}

.action-preview-username-container {
  display: none;
}

// Courseware Tab Navigation
.wrapper-course-material {
  margin: 0 auto;
  padding: 0;
  border-bottom: none;
}

.course-material {
  padding: 0;
  width: auto;
  max-width: inherit;
  margin: 0 auto;
}

// Courses Index
// .course-menu {
//   ul {
//     list-style: none;
//     margin: 1.2em 15px 0;
//     padding: 0;
//   }

//   li {
//     display: inline;
//     margin-right: 1.2em;
//   }

//   a,a:link,a:visited {
//     display: inline-block;
//     font-size: 1.2em;
//     line-height: 1.2;
//     font-family: $gym-font-stack;
//     font-weight: bold;
//     color: #222;
//     text-transform: uppercase;
//     letter-spacing: 0.04em;
//     word-spacing: 0.04em;
//     border-bottom: 1px solid #222;;
//     margin-top: 0.125em;

//     &:active,
//     &:hover {
//       color: #222;
//       text-decoration: none;
//       border-bottom-width: 2px;
//       margin-bottom: -0.125rem;
//     }
//   }
// }


// Course tabs (reusable class)
.tabs {
  padding: 0;
  font-weight: normal;
  margin: 4px 0 -8px; // offset to ensure being vertical centered above white panel

  li,
  .tab {
    display: inline-block;
    list-style: none;
  }

  a {
    padding: 10px 0 0;
    margin-right: 15px;
    text-transform: uppercase;
    color: currentColor;
    cursor: pointer;
    display: block;
    line-height: 20.72px;
    font-family: $gym-font-stack;
    font-size: 1.2em;
    font-weight: bold;

    // &.active:focus:hover {
    //   box-shadow: none;
    //   text-shadow: none;
    //   background: none;
    //   border: none;
    //   text-decoration: none;

    //   b {
    //     color: currentColor;
    //     border-bottom: 2px solid currentColor;
    //   }
    // }

    &.active,
    &:active,
    &:focus,
    &:hover {
      color: currentColor;
      background: none;
      text-decoration: none;
      // border: 0;

      // b {
      //   color: currentColor;
      //   border-bottom: 2px solid currentColor;
      //   text-decoration: none;
      // }
    }

    // b {
    //   text-transform: uppercase;
    //   letter-spacing: 0.05em;
    //   border-bottom: 1px solid currentColor;
    //   vertical-align: -0.15em;
    //   font-size: 1.2em;
    // }
  }
}

// Course Layout Wrapper (eliminate spacing between nav & right panel on wide screens)
.course-wrapper .col-sm-3 {
  padding-right: 15px;
}
@include breakpoint(small, min) {
  .course-wrapper .col-sm-3 {
    padding-right: 0;
  }
}
/* ... */

